// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`testing deleteRole function is not true should get timeout when trying to delete the role, but should pass 1`] = `
Object {
  "pass": true,
  "testName": "deleteRole",
}
`;

exports[`testing deleteRole function isNot false should fail due to inexistent role 1`] = `
Object {
  "message": "expected: role with id 123
received: null",
  "pass": false,
  "testName": "deleteRole",
}
`;

exports[`testing deleteRole function isNot false should fail due to roleIdentifier null 1`] = `
Object {
  "message": "expected: data to identifier the role (id or name)
received: null",
  "pass": false,
  "testName": "deleteRole",
}
`;

exports[`testing deleteRole function isNot false should get timeout when trying to delete the role 1`] = `
Object {
  "message": "expected: role undefined to be deleted",
  "pass": false,
  "testName": "deleteRole",
}
`;

exports[`testing deleteRole function isNot false should return a failed report for a no deleted role 1`] = `
Object {
  "message": "expected: role undefined to be deleted",
  "pass": false,
  "testName": "deleteRole",
}
`;

exports[`testing deleteRole function isNot false should return a failed test due to failure in message sending 1`] = `
Object {
  "message": "can not send message to channel x",
  "pass": false,
  "testName": "deleteRole",
}
`;
